// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxTypes should have specific type properties: all redux types 1`] = `
Object {
  "aboutModalTypes": Object {
    "ABOUT_MODAL_HIDE": "ABOUT_MODAL_HIDE",
    "ABOUT_MODAL_SHOW": "ABOUT_MODAL_SHOW",
  },
  "confirmationModalTypes": Object {
    "CONFIRMATION_MODAL_HIDE": "CONFIRMATION_MODAL_HIDE",
    "CONFIRMATION_MODAL_SHOW": "CONFIRMATION_MODAL_SHOW",
  },
  "credentialsTypes": Object {
    "ADD_CREDENTIAL": "ADD_CREDENTIAL",
    "CREATE_CREDENTIAL_SHOW": "CREATE_CREDENTIAL_SHOW",
    "DELETE_CREDENTIAL": "DELETE_CREDENTIAL",
    "DESELECT_CREDENTIAL": "DESELECT_CREDENTIAL",
    "EDIT_CREDENTIAL_SHOW": "EDIT_CREDENTIAL_SHOW",
    "EXPANDED_CREDENTIAL": "EXPANDED_CREDENTIAL",
    "GET_CREDENTIALS": "GET_CREDENTIALS",
    "NOT_EXPANDED_CREDENTIAL": "NOT_EXPANDED_CREDENTIAL",
    "RESET_ACTIONS": "RESET_CREDENTIAL_ACTIONS",
    "SELECT_CREDENTIAL": "SELECT_CREDENTIAL",
    "UPDATE_CREDENTIAL": "UPDATE_CREDENTIAL",
    "UPDATE_CREDENTIALS": "UPDATE_CREDENTIALS",
    "UPDATE_CREDENTIAL_HIDE": "UPDATE_CREDENTIAL_HIDE",
  },
  "default": Object {
    "aboutModal": Object {
      "ABOUT_MODAL_HIDE": "ABOUT_MODAL_HIDE",
      "ABOUT_MODAL_SHOW": "ABOUT_MODAL_SHOW",
    },
    "confirmationModal": Object {
      "CONFIRMATION_MODAL_HIDE": "CONFIRMATION_MODAL_HIDE",
      "CONFIRMATION_MODAL_SHOW": "CONFIRMATION_MODAL_SHOW",
    },
    "credentials": Object {
      "ADD_CREDENTIAL": "ADD_CREDENTIAL",
      "CREATE_CREDENTIAL_SHOW": "CREATE_CREDENTIAL_SHOW",
      "DELETE_CREDENTIAL": "DELETE_CREDENTIAL",
      "DESELECT_CREDENTIAL": "DESELECT_CREDENTIAL",
      "EDIT_CREDENTIAL_SHOW": "EDIT_CREDENTIAL_SHOW",
      "EXPANDED_CREDENTIAL": "EXPANDED_CREDENTIAL",
      "GET_CREDENTIALS": "GET_CREDENTIALS",
      "NOT_EXPANDED_CREDENTIAL": "NOT_EXPANDED_CREDENTIAL",
      "RESET_ACTIONS": "RESET_CREDENTIAL_ACTIONS",
      "SELECT_CREDENTIAL": "SELECT_CREDENTIAL",
      "UPDATE_CREDENTIAL": "UPDATE_CREDENTIAL",
      "UPDATE_CREDENTIALS": "UPDATE_CREDENTIALS",
      "UPDATE_CREDENTIAL_HIDE": "UPDATE_CREDENTIAL_HIDE",
    },
    "facts": Object {
      "ADD_FACTS": "ADD_FACTS",
    },
    "reports": Object {
      "GET_MERGE_REPORT": "GET_MERGE_REPORT",
      "GET_REPORTS_DOWNLOAD": "GET_REPORTS_DOWNLOAD",
    },
    "scans": Object {
      "ADD_SCAN": "ADD_SCAN",
      "ADD_START_SCAN": "ADD_START_SCAN",
      "CANCEL_SCAN": "CANCEL_SCAN",
      "DELETE_SCAN": "DELETE_SCAN",
      "DESELECT_SCAN": "DESELECT_SCAN",
      "EDIT_SCAN_HIDE": "EDIT_SCAN_HIDE",
      "EDIT_SCAN_SHOW": "EDIT_SCAN_SHOW",
      "EXPANDED_SCAN": "EXPANDED_SCAN",
      "GET_SCANS": "GET_SCANS",
      "GET_SCAN_CONNECTION_RESULTS": "GET_SCAN_CONNECTION_RESULTS",
      "GET_SCAN_INSPECTION_RESULTS": "GET_SCAN_INSPECTION_RESULTS",
      "GET_SCAN_JOB": "GET_SCAN_JOB",
      "GET_SCAN_JOBS": "GET_SCAN_JOBS",
      "MERGE_SCAN_DIALOG_HIDE": "MERGE_SCAN_DIALOG_HIDE",
      "MERGE_SCAN_DIALOG_SHOW": "MERGE_SCAN_DIALOG_SHOW",
      "NOT_EXPANDED_SCAN": "NOT_EXPANDED_SCAN",
      "PAUSE_SCAN": "PAUSE_SCAN",
      "RESET_ACTIONS": "RESET_SCAN_ACTIONS",
      "RESTART_SCAN": "RESTART_SCAN",
      "SELECT_SCAN": "SELECT_SCAN",
      "START_SCAN": "START_SCAN",
      "UPDATE_SCANS": "UPDATE_SCANS",
    },
    "sources": Object {
      "ADD_SOURCE": "ADD_SOURCE",
      "CREATE_SOURCE_SHOW": "CREATE_SOURCE_SHOW",
      "DELETE_SOURCE": "DELETE_SOURCE",
      "DELETE_SOURCES": "DELETE_SOURCES",
      "DESELECT_SOURCE": "DESELECT_SOURCE",
      "EDIT_SOURCE_SHOW": "EDIT_SOURCE_SHOW",
      "EXPANDED_SOURCE": "EXPANDED_SOURCE",
      "GET_SOURCES": "GET_SOURCES",
      "INVALID_SOURCE_WIZARD_STEPTWO": "INVALID_SOURCE_WIZARD_STEPTWO",
      "NOT_EXPANDED_SOURCE": "NOT_EXPANDED_SOURCE",
      "RESET_ACTIONS": "RESET_SOURCE_ACTIONS",
      "SELECT_SOURCE": "SELECT_SOURCE",
      "UPDATE_SOURCE": "UPDATE_SOURCE",
      "UPDATE_SOURCES": "UPDATE_SOURCES",
      "UPDATE_SOURCE_HIDE": "UPDATE_SOURCE_HIDE",
      "VALID_SOURCE_WIZARD_STEPONE": "VALID_SOURCE_WIZARD_STEPONE",
      "VALID_SOURCE_WIZARD_STEPTWO": "VALID_SOURCE_WIZARD_STEPTWO",
    },
    "status": Object {
      "STATUS_INFO": "STATUS_INFO",
    },
    "toastNotifications": Object {
      "TOAST_ADD": "TOAST_ADD",
      "TOAST_PAUSE": "TOAST_PAUSE",
      "TOAST_REMOVE": "TOAST_REMOVE",
      "TOAST_RESUME": "TOAST_RESUME",
    },
    "user": Object {
      "USER_AUTH": "USER_AUTH",
      "USER_INFO": "USER_INFO",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
    "view": Object {
      "CREDENTIALS_VIEW": "CREDENTIALS_VIEW",
      "RESET_PAGE": "RESET_PAGE",
      "SCANS_VIEW": "SCANS_VIEW",
      "SET_FILTER": "SET_FILTER",
      "SET_QUERY": "SET_QUERY",
      "SOURCES_VIEW": "SOURCES_VIEW",
      "UPDATE_VIEW": "UPDATE_VIEW",
    },
  },
  "factsTypes": Object {
    "ADD_FACTS": "ADD_FACTS",
  },
  "reduxTypes": Object {
    "aboutModal": Object {
      "ABOUT_MODAL_HIDE": "ABOUT_MODAL_HIDE",
      "ABOUT_MODAL_SHOW": "ABOUT_MODAL_SHOW",
    },
    "confirmationModal": Object {
      "CONFIRMATION_MODAL_HIDE": "CONFIRMATION_MODAL_HIDE",
      "CONFIRMATION_MODAL_SHOW": "CONFIRMATION_MODAL_SHOW",
    },
    "credentials": Object {
      "ADD_CREDENTIAL": "ADD_CREDENTIAL",
      "CREATE_CREDENTIAL_SHOW": "CREATE_CREDENTIAL_SHOW",
      "DELETE_CREDENTIAL": "DELETE_CREDENTIAL",
      "DESELECT_CREDENTIAL": "DESELECT_CREDENTIAL",
      "EDIT_CREDENTIAL_SHOW": "EDIT_CREDENTIAL_SHOW",
      "EXPANDED_CREDENTIAL": "EXPANDED_CREDENTIAL",
      "GET_CREDENTIALS": "GET_CREDENTIALS",
      "NOT_EXPANDED_CREDENTIAL": "NOT_EXPANDED_CREDENTIAL",
      "RESET_ACTIONS": "RESET_CREDENTIAL_ACTIONS",
      "SELECT_CREDENTIAL": "SELECT_CREDENTIAL",
      "UPDATE_CREDENTIAL": "UPDATE_CREDENTIAL",
      "UPDATE_CREDENTIALS": "UPDATE_CREDENTIALS",
      "UPDATE_CREDENTIAL_HIDE": "UPDATE_CREDENTIAL_HIDE",
    },
    "facts": Object {
      "ADD_FACTS": "ADD_FACTS",
    },
    "reports": Object {
      "GET_MERGE_REPORT": "GET_MERGE_REPORT",
      "GET_REPORTS_DOWNLOAD": "GET_REPORTS_DOWNLOAD",
    },
    "scans": Object {
      "ADD_SCAN": "ADD_SCAN",
      "ADD_START_SCAN": "ADD_START_SCAN",
      "CANCEL_SCAN": "CANCEL_SCAN",
      "DELETE_SCAN": "DELETE_SCAN",
      "DESELECT_SCAN": "DESELECT_SCAN",
      "EDIT_SCAN_HIDE": "EDIT_SCAN_HIDE",
      "EDIT_SCAN_SHOW": "EDIT_SCAN_SHOW",
      "EXPANDED_SCAN": "EXPANDED_SCAN",
      "GET_SCANS": "GET_SCANS",
      "GET_SCAN_CONNECTION_RESULTS": "GET_SCAN_CONNECTION_RESULTS",
      "GET_SCAN_INSPECTION_RESULTS": "GET_SCAN_INSPECTION_RESULTS",
      "GET_SCAN_JOB": "GET_SCAN_JOB",
      "GET_SCAN_JOBS": "GET_SCAN_JOBS",
      "MERGE_SCAN_DIALOG_HIDE": "MERGE_SCAN_DIALOG_HIDE",
      "MERGE_SCAN_DIALOG_SHOW": "MERGE_SCAN_DIALOG_SHOW",
      "NOT_EXPANDED_SCAN": "NOT_EXPANDED_SCAN",
      "PAUSE_SCAN": "PAUSE_SCAN",
      "RESET_ACTIONS": "RESET_SCAN_ACTIONS",
      "RESTART_SCAN": "RESTART_SCAN",
      "SELECT_SCAN": "SELECT_SCAN",
      "START_SCAN": "START_SCAN",
      "UPDATE_SCANS": "UPDATE_SCANS",
    },
    "sources": Object {
      "ADD_SOURCE": "ADD_SOURCE",
      "CREATE_SOURCE_SHOW": "CREATE_SOURCE_SHOW",
      "DELETE_SOURCE": "DELETE_SOURCE",
      "DELETE_SOURCES": "DELETE_SOURCES",
      "DESELECT_SOURCE": "DESELECT_SOURCE",
      "EDIT_SOURCE_SHOW": "EDIT_SOURCE_SHOW",
      "EXPANDED_SOURCE": "EXPANDED_SOURCE",
      "GET_SOURCES": "GET_SOURCES",
      "INVALID_SOURCE_WIZARD_STEPTWO": "INVALID_SOURCE_WIZARD_STEPTWO",
      "NOT_EXPANDED_SOURCE": "NOT_EXPANDED_SOURCE",
      "RESET_ACTIONS": "RESET_SOURCE_ACTIONS",
      "SELECT_SOURCE": "SELECT_SOURCE",
      "UPDATE_SOURCE": "UPDATE_SOURCE",
      "UPDATE_SOURCES": "UPDATE_SOURCES",
      "UPDATE_SOURCE_HIDE": "UPDATE_SOURCE_HIDE",
      "VALID_SOURCE_WIZARD_STEPONE": "VALID_SOURCE_WIZARD_STEPONE",
      "VALID_SOURCE_WIZARD_STEPTWO": "VALID_SOURCE_WIZARD_STEPTWO",
    },
    "status": Object {
      "STATUS_INFO": "STATUS_INFO",
    },
    "toastNotifications": Object {
      "TOAST_ADD": "TOAST_ADD",
      "TOAST_PAUSE": "TOAST_PAUSE",
      "TOAST_REMOVE": "TOAST_REMOVE",
      "TOAST_RESUME": "TOAST_RESUME",
    },
    "user": Object {
      "USER_AUTH": "USER_AUTH",
      "USER_INFO": "USER_INFO",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
    "view": Object {
      "CREDENTIALS_VIEW": "CREDENTIALS_VIEW",
      "RESET_PAGE": "RESET_PAGE",
      "SCANS_VIEW": "SCANS_VIEW",
      "SET_FILTER": "SET_FILTER",
      "SET_QUERY": "SET_QUERY",
      "SOURCES_VIEW": "SOURCES_VIEW",
      "UPDATE_VIEW": "UPDATE_VIEW",
    },
  },
  "reportsTypes": Object {
    "GET_MERGE_REPORT": "GET_MERGE_REPORT",
    "GET_REPORTS_DOWNLOAD": "GET_REPORTS_DOWNLOAD",
  },
  "scansTypes": Object {
    "ADD_SCAN": "ADD_SCAN",
    "ADD_START_SCAN": "ADD_START_SCAN",
    "CANCEL_SCAN": "CANCEL_SCAN",
    "DELETE_SCAN": "DELETE_SCAN",
    "DESELECT_SCAN": "DESELECT_SCAN",
    "EDIT_SCAN_HIDE": "EDIT_SCAN_HIDE",
    "EDIT_SCAN_SHOW": "EDIT_SCAN_SHOW",
    "EXPANDED_SCAN": "EXPANDED_SCAN",
    "GET_SCANS": "GET_SCANS",
    "GET_SCAN_CONNECTION_RESULTS": "GET_SCAN_CONNECTION_RESULTS",
    "GET_SCAN_INSPECTION_RESULTS": "GET_SCAN_INSPECTION_RESULTS",
    "GET_SCAN_JOB": "GET_SCAN_JOB",
    "GET_SCAN_JOBS": "GET_SCAN_JOBS",
    "MERGE_SCAN_DIALOG_HIDE": "MERGE_SCAN_DIALOG_HIDE",
    "MERGE_SCAN_DIALOG_SHOW": "MERGE_SCAN_DIALOG_SHOW",
    "NOT_EXPANDED_SCAN": "NOT_EXPANDED_SCAN",
    "PAUSE_SCAN": "PAUSE_SCAN",
    "RESET_ACTIONS": "RESET_SCAN_ACTIONS",
    "RESTART_SCAN": "RESTART_SCAN",
    "SELECT_SCAN": "SELECT_SCAN",
    "START_SCAN": "START_SCAN",
    "UPDATE_SCANS": "UPDATE_SCANS",
  },
  "sourcesTypes": Object {
    "ADD_SOURCE": "ADD_SOURCE",
    "CREATE_SOURCE_SHOW": "CREATE_SOURCE_SHOW",
    "DELETE_SOURCE": "DELETE_SOURCE",
    "DELETE_SOURCES": "DELETE_SOURCES",
    "DESELECT_SOURCE": "DESELECT_SOURCE",
    "EDIT_SOURCE_SHOW": "EDIT_SOURCE_SHOW",
    "EXPANDED_SOURCE": "EXPANDED_SOURCE",
    "GET_SOURCES": "GET_SOURCES",
    "INVALID_SOURCE_WIZARD_STEPTWO": "INVALID_SOURCE_WIZARD_STEPTWO",
    "NOT_EXPANDED_SOURCE": "NOT_EXPANDED_SOURCE",
    "RESET_ACTIONS": "RESET_SOURCE_ACTIONS",
    "SELECT_SOURCE": "SELECT_SOURCE",
    "UPDATE_SOURCE": "UPDATE_SOURCE",
    "UPDATE_SOURCES": "UPDATE_SOURCES",
    "UPDATE_SOURCE_HIDE": "UPDATE_SOURCE_HIDE",
    "VALID_SOURCE_WIZARD_STEPONE": "VALID_SOURCE_WIZARD_STEPONE",
    "VALID_SOURCE_WIZARD_STEPTWO": "VALID_SOURCE_WIZARD_STEPTWO",
  },
  "statusTypes": Object {
    "STATUS_INFO": "STATUS_INFO",
  },
  "toastNotificationTypes": Object {
    "TOAST_ADD": "TOAST_ADD",
    "TOAST_PAUSE": "TOAST_PAUSE",
    "TOAST_REMOVE": "TOAST_REMOVE",
    "TOAST_RESUME": "TOAST_RESUME",
  },
  "userTypes": Object {
    "USER_AUTH": "USER_AUTH",
    "USER_INFO": "USER_INFO",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
  "viewTypes": Object {
    "CREDENTIALS_VIEW": "CREDENTIALS_VIEW",
    "RESET_PAGE": "RESET_PAGE",
    "SCANS_VIEW": "SCANS_VIEW",
    "SET_FILTER": "SET_FILTER",
    "SET_QUERY": "SET_QUERY",
    "SOURCES_VIEW": "SOURCES_VIEW",
    "UPDATE_VIEW": "UPDATE_VIEW",
  },
}
`;

exports[`ReduxTypes should have specific type properties: specific types 1`] = `
Object {
  "aboutModal": Object {
    "ABOUT_MODAL_HIDE": "ABOUT_MODAL_HIDE",
    "ABOUT_MODAL_SHOW": "ABOUT_MODAL_SHOW",
  },
  "confirmationModal": Object {
    "CONFIRMATION_MODAL_HIDE": "CONFIRMATION_MODAL_HIDE",
    "CONFIRMATION_MODAL_SHOW": "CONFIRMATION_MODAL_SHOW",
  },
  "credentials": Object {
    "ADD_CREDENTIAL": "ADD_CREDENTIAL",
    "CREATE_CREDENTIAL_SHOW": "CREATE_CREDENTIAL_SHOW",
    "DELETE_CREDENTIAL": "DELETE_CREDENTIAL",
    "DESELECT_CREDENTIAL": "DESELECT_CREDENTIAL",
    "EDIT_CREDENTIAL_SHOW": "EDIT_CREDENTIAL_SHOW",
    "EXPANDED_CREDENTIAL": "EXPANDED_CREDENTIAL",
    "GET_CREDENTIALS": "GET_CREDENTIALS",
    "NOT_EXPANDED_CREDENTIAL": "NOT_EXPANDED_CREDENTIAL",
    "RESET_ACTIONS": "RESET_CREDENTIAL_ACTIONS",
    "SELECT_CREDENTIAL": "SELECT_CREDENTIAL",
    "UPDATE_CREDENTIAL": "UPDATE_CREDENTIAL",
    "UPDATE_CREDENTIALS": "UPDATE_CREDENTIALS",
    "UPDATE_CREDENTIAL_HIDE": "UPDATE_CREDENTIAL_HIDE",
  },
  "facts": Object {
    "ADD_FACTS": "ADD_FACTS",
  },
  "reports": Object {
    "GET_MERGE_REPORT": "GET_MERGE_REPORT",
    "GET_REPORTS_DOWNLOAD": "GET_REPORTS_DOWNLOAD",
  },
  "scans": Object {
    "ADD_SCAN": "ADD_SCAN",
    "ADD_START_SCAN": "ADD_START_SCAN",
    "CANCEL_SCAN": "CANCEL_SCAN",
    "DELETE_SCAN": "DELETE_SCAN",
    "DESELECT_SCAN": "DESELECT_SCAN",
    "EDIT_SCAN_HIDE": "EDIT_SCAN_HIDE",
    "EDIT_SCAN_SHOW": "EDIT_SCAN_SHOW",
    "EXPANDED_SCAN": "EXPANDED_SCAN",
    "GET_SCANS": "GET_SCANS",
    "GET_SCAN_CONNECTION_RESULTS": "GET_SCAN_CONNECTION_RESULTS",
    "GET_SCAN_INSPECTION_RESULTS": "GET_SCAN_INSPECTION_RESULTS",
    "GET_SCAN_JOB": "GET_SCAN_JOB",
    "GET_SCAN_JOBS": "GET_SCAN_JOBS",
    "MERGE_SCAN_DIALOG_HIDE": "MERGE_SCAN_DIALOG_HIDE",
    "MERGE_SCAN_DIALOG_SHOW": "MERGE_SCAN_DIALOG_SHOW",
    "NOT_EXPANDED_SCAN": "NOT_EXPANDED_SCAN",
    "PAUSE_SCAN": "PAUSE_SCAN",
    "RESET_ACTIONS": "RESET_SCAN_ACTIONS",
    "RESTART_SCAN": "RESTART_SCAN",
    "SELECT_SCAN": "SELECT_SCAN",
    "START_SCAN": "START_SCAN",
    "UPDATE_SCANS": "UPDATE_SCANS",
  },
  "sources": Object {
    "ADD_SOURCE": "ADD_SOURCE",
    "CREATE_SOURCE_SHOW": "CREATE_SOURCE_SHOW",
    "DELETE_SOURCE": "DELETE_SOURCE",
    "DELETE_SOURCES": "DELETE_SOURCES",
    "DESELECT_SOURCE": "DESELECT_SOURCE",
    "EDIT_SOURCE_SHOW": "EDIT_SOURCE_SHOW",
    "EXPANDED_SOURCE": "EXPANDED_SOURCE",
    "GET_SOURCES": "GET_SOURCES",
    "INVALID_SOURCE_WIZARD_STEPTWO": "INVALID_SOURCE_WIZARD_STEPTWO",
    "NOT_EXPANDED_SOURCE": "NOT_EXPANDED_SOURCE",
    "RESET_ACTIONS": "RESET_SOURCE_ACTIONS",
    "SELECT_SOURCE": "SELECT_SOURCE",
    "UPDATE_SOURCE": "UPDATE_SOURCE",
    "UPDATE_SOURCES": "UPDATE_SOURCES",
    "UPDATE_SOURCE_HIDE": "UPDATE_SOURCE_HIDE",
    "VALID_SOURCE_WIZARD_STEPONE": "VALID_SOURCE_WIZARD_STEPONE",
    "VALID_SOURCE_WIZARD_STEPTWO": "VALID_SOURCE_WIZARD_STEPTWO",
  },
  "status": Object {
    "STATUS_INFO": "STATUS_INFO",
  },
  "toastNotifications": Object {
    "TOAST_ADD": "TOAST_ADD",
    "TOAST_PAUSE": "TOAST_PAUSE",
    "TOAST_REMOVE": "TOAST_REMOVE",
    "TOAST_RESUME": "TOAST_RESUME",
  },
  "user": Object {
    "USER_AUTH": "USER_AUTH",
    "USER_INFO": "USER_INFO",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
  "view": Object {
    "CREDENTIALS_VIEW": "CREDENTIALS_VIEW",
    "RESET_PAGE": "RESET_PAGE",
    "SCANS_VIEW": "SCANS_VIEW",
    "SET_FILTER": "SET_FILTER",
    "SET_QUERY": "SET_QUERY",
    "SOURCES_VIEW": "SOURCES_VIEW",
    "UPDATE_VIEW": "UPDATE_VIEW",
  },
}
`;
